[gd_scene load_steps=5 format=2]

[ext_resource path="res://room/Label.gd" type="Script" id=1]
[ext_resource path="res://room/dialogue.gd" type="Script" id=2]
[ext_resource path="res://Jessycat.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="dialogue" type="Control"]
margin_right = 1013.0
margin_bottom = 589.0
grow_vertical = 2
script = ExtResource( 2 )
text = ""

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -42.0
margin_right = 10.0
grow_vertical = 0
custom_colors/font_color = Color( 0.521569, 0.14902, 0.14902, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="clearTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="Label" method="_on_Timer_timeout"]
[connection signal="timeout" from="clearTimer" to="Label" method="_on_clearTimer_timeout"]
